# horse-racing-prediction

./: .gitignore  AGENTS.md  README.md  app.py  apply_migrations.py  check_streamlit.py  cron.txt  docker-compose.yml  launch_all.ps1  programmes.json  pyproject.toml  verify_ml_enrichment.py  verify_new_ingestion.py
backend/: Dockerfile
backend/src/api/: Kelly_Formula.py  backtest_service.py  kelly_multi_races.py  main.py  repositories.py  schemas.py
backend/src/cli/: backfill_predictions.py  cronJobs.py  daily_performance_etl.py  etl.py  telegram_bot.py
backend/src/core/: config.py  database.py
backend/src/ingestion/: base.py  participants.py  performances.py  program.py  rapports.py
backend/src/ml/: AGENTS.md  IDEAS.md  STRUCTURE.txt  feature_config.py  features.py  gpt_models.py  loader.py  ltr_bridge.py  ltr_trainer.py  models.py  predictor.py  safe_loader.py  tabnet_bridge.py  tabnet_utils.py  trainer.py  trainer_gpt.py  trainer_gpt_latest.txt  trainer_hyperstack.py  trainer_hyperstack.txt  trainer_hyperstack_latest.txt  trainer_ltr.py  trainer_ltr.txt  trainer_ltr_latest.txt  trainer_tabnet_gpu.py  trainer_tabnet_gpu.txt  trainer_tabnet_gpu_2.txt  trainer_tabnet_latest.txt
backend/src/ml/data_old/: trainer.py  trainer_ML.md  trainer_autoML.py  trainer_hyperstack_ranker.py  trainer_mixture.py  trainer_multimodel.py  trainer_opt.py.md  trainer_optuna.py.md  trainer_ranking.py.md
backend/tests/: conftest.py  test_advice.py  test_api.py  test_multi_model.py
backend/tests/integration/: test_api_routes.py  test_ingestion_flow.py
backend/tests/unit/: test_api_sniper.py  test_ingestion_base.py  test_ml_features.py
data/: backtest_cache.json
doc/: Rentability.txt  TO_VERIFY.md  backtesting_performance_trainers.txt  daily_performance_ml.txt  ltr_trainer.txt  ltr_trainer2.txt  ltr_trainer_DS.txt  participants-01042026-4-9.json  participants-08042026-3-2.json  process_25042026.txt  programmes-02042026.json  trainer_hyperstack.txt  trainer_hyperstack_2.txt  trainer_tabnet_gpu.md  trainer_tabnet_gpu_2.txt
frontend/: Dockerfile  app.py  app_moved.py
frontend/.streamlit/: config.toml
frontend/api/: api_client.py
frontend/state/: cronJobs.py  store.py
frontend/tests/: conftest.py  test_api.py  verify_scheduler.py  verify_upsert.py
frontend/tests/streamlit/: test_e2e_flow.py  test_ui_components.py
frontend/tests/unit/: test_api_client.py
frontend/ui/: admin.py  analysis.py  backtest.py  portfolio.py  race.py  sidebar.py  sniper.py
microgpt/: microgpt.py
sql/: 01_schema.sql  02_game_advice.sql  apply_migration.py
