[project]
name = "horse-racing-prediction"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pandas>=1.3.0,<3",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>1.2.0, <1.8.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.32.0",
    "urllib3>=2.6.3",
    "xgboost>=3.2.0",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "uvicorn>=0.29.03",
    "python-multipart>=0.0.9",
    "joblib>=1.4.2",
    "altair < 5",
    "pandas-stubs~=2.3.3",
    "psycopg>=3.3.3",
    "python-crontab>=3.3.0",
    "apscheduler>=3.10.0"
]
