[project]
name = "horse-racing-prediction"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pandas>=1.3.0,<3",
    "psycopg2-binary>=2.9.11",
    "pytest==9.0.3",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.2.2",
    "requests==2.33.1",
    "scikit-learn>1.2.0, <1.8.0",
    "scikit-learn-intelex",
    "sqlalchemy==2.0.49",
    "streamlit==1.56.0",
    "urllib3>=2.6.3",
    "xgboost>=3.2.0",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "uvicorn>=0.29.03",
    "python-multipart>=0.0.9",
    "joblib>=1.4.2",
    "altair < 5",
    "psycopg>=3.3.3",
    "python-crontab>=3.3.0",
    "apscheduler>=3.10.0",
    "optuna>=4.8.0",
    "category-encoders>=2.9.0",
    "shap>=0.51.0",
    "matplotlib>=1.5.0",
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "scipy-stubs~=1.17.1",
    "scipy>=1.17.1",
    "torch>=2.9.0",
    "pytorch-tabnet>=4.1.0",
    "dpcpp-cpp-rt>=2025.3.3",
    "plotly==6.7.0",
    "pandas-stubs~=2.3.3",
    "intel-npu-acceleration-library>=1.4.0",
]
[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
[tool.uv.sources]
torch = [
#{ index = "pytorch-cpu", extra = "cpu" },
#    {index = "pytorch-cu128", extra="gpu128"},
    {index = "pytorch-cu130", extra="gpu130"},
#{ index = "pytorch-npu", extra = "npu" },
]
[project.optional-dependencies]
cpu = [
    "torch>=2.9.0",
]
gpu128 = [
    "torch>=2.9.0",
]
gpu130 = [
    "torch>=2.9.0",
]
npu = [
    "torch>=2.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
[[tool.uv.index]]
name = "pytorch-npu"
url = "https://download.pytorch.org/whl/npu"
explicit = true

